[package]
name = "move_image"
version = "0.1.0"
authors = ["bobrinik <bobrini>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
structopt = "0.3.13"
reqwest = "0.10.8"
openssl = { version = "0.10.30", features = ["vendored"] }
tokio = { version = "0.2", features = ["full"] }